<resources>
    <string name="app_name">AndroidTraining</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_message">Edit message</string>
    <string name="action_display">Display</string>
    <string name="action_add">Add</string>
    <string name="dropdown">DropDown</string>
    <string name="tabs">Tabs</string>
    <string name="menu_login">Login</string>
    <string name="edit_message">Enter a message</string>
    <string name="edit_firstname">Enter first name</string>
    <string name="edit_lastname">Enter last name</string>
    <string name="edit_password">Enter password</string>
    <string name="edit_password_repeat">Re-enter password</string>
    <string name="hint_last_signed_user">Last signed user</string>
    <string name="button_send">Send</string>
    <string name="button_dogs">Dogs</string>
    <string name="button_rafa">Rafa</string>
    <string name="button_android">Android</string>
    <string name="button_save">Save String to IM</string>
    <string name="button_load">Load String from IM</string>
    <string name="button_signin">Sign in</string>
    <string name="button_intents">Try Intents !</string>
    <string name="button_phone">Phone Intent</string>
    <string name="button_map">Map Intent</string>
    <string name="button_web">Web Intent</string>
    <string name="button_mail">Mail Intent</string>
    <string name="button_calendar">Calendar Intent</string>
    <string name="button_contact">Contact Intent</string>
    <string name="button_implicit">Implicit Intent</string>
    <string name="button_alarm">Alarm Intent</string>
    <string name="button_timer">Timer Intent</string>
    <string name="button_camera">Camera Intent</string>
    <string name="button_camera_still">Still Cam Intent</string>
    <string name="button_video">Video Intent</string>
    <string name="button_file_retrieve">Retrieve File Intent</string>
    <string name="button_file_open">Open File Intent</string>
    <string name="button_taxi">Taxi Intent</string>
    <string name="button_music">Music Intent</string>
    <string name="button_music_search">Music Search Intent</string>
    <string name="button_web_search">Web Search Intent</string>
    <string name="button_settings">Settings Intent</string>
    <string name="button_mms">MMS Intent</string>
    <string name="button_intent_service">Intent Service</string>
    <string name="button_service">Service</string>
    <string name="button_bind_service">Bind Service</string>
    <string name="button_request_file">Request File</string>
    <string name="chooser_title">Share this message via</string>
    <string name="button_database_title">Database</string>
    <string name="button_media_title">Media</string>
    <string name="button_media_raw">Raw Resource</string>
    <string name="button_media_uri">URI Resource</string>
    <string name="button_media_url">URL Resource</string>
    <string name="button_release">Release !</string>
    <string name="button_media_service">Media Service</string>
    <string name="button_release_service">Destroy service</string>
    <string name="button_media_foreground_service">Media Foreground</string>
    <string name="button_media_stop_foreground">Stop Foreground</string>
    <string name="button_record">Record This !</string>
    <string name="button_camera_app">Camera App</string>
    <string name="button_capture">Capture</string>
    <string name="button_video_capture">Video App</string>
    <string name="button_print_image">Print Image</string>
    <string name="button_print_document">Print Document</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_display">Images</string>
    <string name="title_saved_string">Saved String:</string>
    <string name="hello_world">Hello world!</string>
    <string name="hi_world">@string/hello_world</string>
    <string name="count">Count</string>
    <string name="search">Search</string>
    <string name="activity_monitor">Activity Monitor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_drop_down_navigation">DropDownNavigationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="count_value_key">count</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_intents">IntentsActivity</string>
    <string name="title_activity_file_select">FileSelectActivity</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_bitmap">BitmapActivity</string>
    <string name="button_load_raw">Load Raw</string>
    <string name="button_load_bitmap">Load Bitmap</string>
    <string name="textView_load_time">Load time</string>
    <string name="button_load_efficiently">Load Efficiently</string>
    <string name="radio_100_100">100x100</string>
    <string name="radio_400_400">400x400</string>
    <string name="radio_800_800">800x800</string>
    <string name="radio_1600_1600">1.6x1.6</string>
    <string name="button_load_asynchronously">AsyncTask</string>
    <string name="button_concurrency">Concurrency</string>
    <string name="button_cache_load">Cache</string>
    <string name="button_viewpager">ViewPager</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="imageView_viewPager_test">ViewPager test</string>
    <string name="title_activity_grid">GridActivity</string>
    <string name="button_grid_view">GridView</string>
    <string name="title_activity_open_gl">OpenGLActivity</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="button_animation">Animation</string>
    <string name="textView_title">Title</string>
    <string name="textView1_sceneA">Text Line 1</string>
    <string name="textView2_sceneA">Text Line 2</string>
    <string name="button_start_animation">Animate</string>
    <string name="button_add_items">Add Items</string>
    <string name="button_remove_me">Move Me !</string>
    <string name="menu_show_info">Show info</string>
    <string name="menu_show_image">Show Image</string>
    <string name="rafa_thumbnail_description">Rafa thumbnail</string>
    <string name="rafa_image_full_size_description">Rafa image in full size</string>
    <string name="prairie_dogs_image_description">Prairie thumbnail</string>
    <string name="button_get_location">Get Location</string>
    <string name="textView_longitude">Longitude:</string>
    <string name="textView_latitude">Latitude:</string>
    <string name="checkBox_location_updates">Frequent updates</string>
    <string name="textView_last_updated">Last Updated:</string>
    <string name="button_get_address">Get Address</string>
    <string name="textView_address">Address:</string>
    <string name="button_geofencing">Geofencing</string>
    <string name="button_viewPager">ViewPager</string>
    <string name="button_drawer">Navigation Drawer</string>
    <string name="button_notification">Notify Me !</string>
    <string name="switch_big_view">Big View Notification</string>
</resources>