<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.androidtraining.IntentsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_phone"
                android:onClick="phoneIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_map"
                android:onClick="mapIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_web"
                android:onClick="webIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_mail"
                android:onClick="mailIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_calendar"
                android:onClick="calendarIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_contact"
                android:onClick="pickContactIntent"/>

            <Button
                android:id="@+id/btn_implicitTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_implicit"
                android:onClick="sendImplicitIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_alarm"
                android:onClick="setAlarmIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_timer"
                android:onClick="startTimerIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_camera"
                android:onClick="captureImageIntent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_camera_still"
                android:onClick="captureStillImageIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_video"
                android:onClick="startVideoIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_file_retrieve"
                android:onClick="selectImageIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_file_open"
                android:onClick="openImageIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_taxi"
                android:onClick="callCarIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_music"
                android:onClick="playMediaIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_music_search"
                android:textScaleX="0.97"
                android:onClick="playSearchArtistIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_web_search"
                android:onClick="webSearchIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_settings"
                android:onClick="settingsIntent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                style="@style/FontColor"
                android:text="@string/button_mms"
                android:onClick="composeMmsMessageIntent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
