<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.androidtraining.GettingStarted.LocationActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_get_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_get_location"
            android:textAllCaps="false"
            style="@style/FontColor"
            android:onClick="getLocation"/>

        <Button
            android:id="@+id/button_get_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_get_address"
            android:textAllCaps="false"
            style="@style/FontColor"
            android:onClick="getAddress"/>

        <Button
            android:id="@+id/button_geofencing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_geofencing"
            android:textAllCaps="false"
            style="@style/FontColor"
            android:onClick="startGeofencing"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox_location_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_location_updates"
            android:checked="false"
            android:onClick="frequentUpdates"/>

        <TextView
            android:id="@+id/textView_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_longitude"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_latitude"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_last_updated"/>

        <TextView
            android:id="@+id/textView_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_address"/>



    </LinearLayout>

</LinearLayout>
