<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.androidtraining.GettingStarted.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_firstname" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_lastname" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password" />

        <EditText
            android:id="@+id/editTextPassRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password_repeat" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnRegister"
                style="@style/FontColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="signIn"
                android:text="@string/button_signin"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_database"
                style="@style/FontColor"
                android:text="@string/button_database_title"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showRegistered"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/lastSignedUser"
        android:layout_width="match_parent"
        android:layout_height="25sp"
        android:background="@drawable/rectangle"
        android:layout_alignParentBottom="true"
        android:paddingLeft="10sp"
        android:paddingTop="4sp"
        android:hint="@string/hint_last_signed_user"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
