<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.androidtraining.AnimationApp.CardFlipActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_flip_to_image"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_show_image"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_flip_to_info"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/menu_show_info"
        app:showAsAction="always" />

</menu>