<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.androidtraining.ViewPagerActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <RadioButton
            android:id="@+id/radio_100_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_100_100"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_400_400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_400_400"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_800_800"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_800_800"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_1600_1600"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_1600_1600"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

</RelativeLayout>
