<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.androidtraining.Navigation.NavigationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_viewPager"
            android:textAllCaps="false"
            style="@style/FontColor"
            android:onClick="startViewPager"/>

        <Button
            android:id="@+id/button_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_drawer"
            android:textAllCaps="false"
            style="@style/FontColor"
            android:onClick="startDrawer"/>

        <Button
            android:id="@+id/button_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_notification"
            android:textAllCaps="false"
            style="@style/FontColor"
            android:onClick="notifyMe"
            android:drawableTop="@drawable/machine"/>

    </LinearLayout>

    <Switch
        android:id="@+id/switch_big_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_big_view"
        android:checked="false"
        android:showText="true"
        />



</RelativeLayout>
