<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.example.android.androidtraining.MediaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_release"
            style="@style/FontColor"
            android:textAllCaps="false"
            android:onClick="release"/>

        <Button
            android:id="@+id/button_raw_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_media_raw"
            style="@style/FontColor"
            android:textAllCaps="false"
            android:onClick="playRaw"/>

        <Button
            android:id="@+id/button_uri_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontColor"
            android:textAllCaps="false"
            android:text="@string/button_media_uri"
            android:onClick="playURI"/>

        <Button
            android:id="@+id/button_url_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontColor"
            android:textAllCaps="false"
            android:text="@string/button_media_url"
            android:onClick="playURL"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>
