<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zoom_animation_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.androidtraining.ZoomAnimationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/thumb_button_1"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="1dp"
            android:src="@drawable/rafa"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:contentDescription="@string/rafa_thumbnail_description"/>

        <ImageButton
            android:id="@+id/thumb_button_2"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="1dp"
            android:src="@drawable/prairiedogs"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:contentDescription="@string/prairie_dogs_image_description"/>

    </LinearLayout>

    <!-- This initially-hidden ImageView will hold the expanded/zoomed version of
         the images above. Without transformations applied, it takes up the entire
         screen. To achieve the "zoom" animation, this view's bounds are animated
         from the bounds of the thumbnail button above, to its final laid-out
         bounds.
         -->

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:contentDescription="@string/rafa_image_full_size_description"/>

</FrameLayout>
